--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -2,8 +2,8 @@
 <odoo>
     <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Properties</field>
-        <field name="res_model">estate.property</field>
-        <field name="view_mode">tree,form</field>
+        <field name="res_model">estate.properties</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <menuitem id="estate_property_menu_root" name="Real Estate"/>
