--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -16,6 +16,46 @@
         </field>
     </record>
 
+    <record id="estate_property_view_form" model="ir.ui.view">
+        <field name="name">estate.properties.form</field>
+        <field name="model">estate.properties</field>
+        <field name="arch" type="xml">
+            <form string="Property">
+               <sheet>
+                 <div class="oe_title">
+                    <h1>
+                        <field name="name" placeholder="Property Title"/>
+                    </h1>
+                 </div>
+                  <group>
+                     <group>
+                        <field name="postcode"/>
+                        <field name="date_availability" string="Available From"/>
+                     </group>
+                     <group>
+                        <field name="expected_price"/>
+                        <field name="selling_price"/>
+                     </group>
+                  </group>
+                  <notebook>
+                    <page string="Description">
+                        <group>
+                            <field name="description"/>
+                            <field name="bedrooms"/>
+                            <field name="living_area" string="Living Area (sqm)"/>
+                            <field name="facades"/>
+                            <field name="garage"/>
+                            <field name="garden"/>
+                            <field name="garden_area" string="Garden Area (sqm)"/>
+                            <field name="garden_orientation"/>
+                        </group>
+                    </page>
+                  </notebook>
+               </sheet>
+            </form>
+        </field>
+    </record>
+
     <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Properties</field>
         <field name="res_model">estate.properties</field>
