--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -56,6 +56,27 @@
         </field>
     </record>
 
+    <record id="estate_property_view_search" model="ir.ui.view">
+        <field name="name">estate.properties.search</field>
+        <field name="model">estate.properties</field>
+        <field name="arch" type="xml">
+            <search string="Search Properties">
+              <field name="name" string="Title"/>
+              <field name="postcode"/>
+              <field name="expected_price"/>
+              <field name="bedrooms"/>
+              <field name="living_area" string="Living Area (sqm)" filter_domain="[('living_area', '>=', self)]"/>
+              <field name="facades"/>
+
+              <filter string="Available" name="available" domain="[('state', 'in', ('new', 'offer_received'))]"/>
+            
+              <group expand="1" string="Group By">
+                  <filter string="Postcode" name="postcode" context="{'group_by':'postcode'}"/>
+              </group>
+            </search>
+        </field>
+    </record>
+
     <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Properties</field>
         <field name="res_model">estate.properties</field>
