--- a/views/estate_menu.xml
+++ b/views/estate_menu.xml
@@ -6,6 +6,15 @@
     <menuitem id="estate_first_level_menu" 
               name="Advertisements" 
               parent="estate_menu_root"/>
+    <menuitem id="estate_menu_settings" 
+              name="Settings" 
+              parent="estate_menu_root" 
+              sequence="100"/>
+
+    <menuitem id="estate_property_type_menu_action" 
+              name="Property Types"
+              action="estate_property_type_action" 
+              parent="estate_menu_settings"/>
 
     <menuitem id="estate_property_menu_action" 
               name="Properties"
