--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -50,6 +50,13 @@
                             <field name="garden_orientation"/>
                         </group>
                     </page>
+                    <page string="Other Info">
+                        <group>
+                            <field name="user_id"/>
+                            <field name="buyer_id"/>
+                        </group>
+                    </page>
+               
                   </notebook>
                </sheet>
             </form>
