--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -12,6 +12,7 @@
                 <field name="expected_price"/>
                 <field name="selling_price"/>
                 <field name="date_availability" string="Available From"/>
+                <field name="tag_ids" widget="many2many_tags"/>
             </list>
         </field>
     </record>
@@ -26,6 +27,7 @@
                     <h1>
                         <field name="name" placeholder="Property Title"/>
                     </h1>
+                    <field name="tag_ids" widget="many2many_tags"/>
                  </div>
                   <group>
                      <group>
