--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -52,6 +52,9 @@
                             <field name="garden_orientation"/>
                         </group>
                     </page>
+                    <page string="Offers">
+                            <field name="offer_ids"/>
+                    </page>
                     <page string="Other Info">
                         <group>
                             <field name="user_id"/>
