--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -50,6 +50,7 @@
                             <field name="garden"/>
                             <field name="garden_area" string="Garden Area (sqm)"/>
                             <field name="garden_orientation"/>
+                            <field name="total_area"/>
                         </group>
                     </page>
                     <page string="Offers">
