--- a/views/estate_property_offer_views.xml
+++ b/views/estate_property_offer_views.xml
@@ -7,6 +7,7 @@
             <list string="Offers">
                 <field name="price"/>
                 <field name="partner_id"/>
+                <field name="validity"/> <field name="date_deadline"/> <field name="status"/>
                 <field name="status"/>
             </list>
         </field>
@@ -20,6 +21,7 @@
                 <group>
                     <field name="price"/>
                     <field name="partner_id"/>
+                    <field name="validity"/> <field name="date_deadline"/> <field name="status"/>
                     <field name="status"/>
                 </group>
             </form>
