--- a/views/estate_property_offer_views.xml
+++ b/views/estate_property_offer_views.xml
@@ -7,7 +7,9 @@
             <list string="Offers">
                 <field name="price"/>
                 <field name="partner_id"/>
-                <field name="validity"/> <field name="date_deadline"/> <field name="status"/>
+                <field name="validity"/> <field name="date_deadline"/> 
+                <button name="action_accept" string="Accept" type="object" icon="fa-check" invisible="status"/>
+                <button name="action_refuse" string="Refuse" type="object" icon="fa-times" invisible="status"/>
                 <field name="status"/>
             </list>
         </field>
@@ -21,7 +23,7 @@
                 <group>
                     <field name="price"/>
                     <field name="partner_id"/>
-                    <field name="validity"/> <field name="date_deadline"/> <field name="status"/>
+                    <field name="validity"/> <field name="date_deadline"/> 
                     <field name="status"/>
                 </group>
             </form>
