--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -22,6 +22,11 @@
         <field name="model">estate.properties</field>
         <field name="arch" type="xml">
             <form string="Property">
+               <header>
+                   <button name="action_sold" type="object" string="Sold" invisible="state in ('sold', 'canceled')"/>
+                   <button name="action_cancel" type="object" string="Cancel" invisible="state in ('sold', 'canceled')"/>
+                   <field name="state" widget="statusbar" statusbar_visible="new,offer_received,offer_accepted,sold"/>
+                </header>
                <sheet>
                  <div class="oe_title">
                     <h1>
