--- a/views/estate_property_type_views.xml
+++ b/views/estate_property_type_views.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <record id="estate_property_type_view_list" model="ir.ui.view">
+        <field name="name">estate.property.type.list</field>
+        <field name="model">estate.property.type</field>
+        <field name="arch" type="xml">
+           <list string="Property Types">
+             <field name="sequence" widget="handle"/>
+             <field name="name"/>
+           </list>
+        </field>
+    </record>
     <record id="estate_property_type_view_form" model="ir.ui.view">
        <field name="name">estate.property.type.form</field>
        <field name="model">estate.property.type</field>
