--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -32,10 +32,11 @@
                     <h1>
                         <field name="name" placeholder="Property Title"/>
                     </h1>
-                    <field name="tag_ids" widget="many2many_tags"/>
+                    <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                  </div>
                   <group>
                      <group>
+                        <field name="property_type_id" options="{'no_create': True, 'no_edit': True}"/>
                         <field name="postcode"/>
                         <field name="date_availability" string="Available From"/>
                      </group>
