--- a/views/estate_property_offer_views.xml
+++ b/views/estate_property_offer_views.xml
@@ -4,7 +4,10 @@
         <field name="name">estate.property.offer.list</field>
         <field name="model">estate.property.offer</field>
         <field name="arch" type="xml">
-            <list string="Offers" editable="bottom">
+            <list string="Offers" 
+                  editable="bottom" 
+                  decoration-danger="status == 'refused'" 
+                  decoration-success="status == 'accepted'">
                 <field name="price"/>
                 <field name="partner_id"/>
                 <field name="validity"/> <field name="date_deadline"/> 
