--- a/views/estate_property_type_views.xml
+++ b/views/estate_property_type_views.xml
@@ -10,12 +10,27 @@
            </list>
         </field>
     </record>
+    <record id="action_estate_property_offer" model="ir.actions.act_window">
+        <field name="name">Property Offers</field>
+        <field name="res_model">estate.property.offer</field>
+        <field name="view_mode">list,form</field>
+        <field name="domain">[('property_type_id', '=', active_id)]</field>
+    </record>
     <record id="estate_property_type_view_form" model="ir.ui.view">
        <field name="name">estate.property.type.form</field>
        <field name="model">estate.property.type</field>
        <field name="arch" type="xml">
           <form string="Property Type">
              <sheet>
+                <div class="oe_button_box" name="button_box">
+                  <button name="%(action_estate_property_offer)d"
+                         type="action" 
+                         class="oe_stat_button" 
+                         icon="fa-money">
+                     <field name="offer_count" widget="statinfo" string="Offers"/>
+                  </button>
+                </div>
+                  
                 <div class="oe_title">
                     <h1><field name="name"/></h1>
                 </div>
@@ -34,9 +49,11 @@
          </form>
        </field>
     </record>
-    <record id="estate_property_type_action" model="ir.actions.act_window">
-        <field name="name">Property Types</field>
-        <field name="res_model">estate.property.type</field>
-        <field name="view_mode">list,form</field>
+    <record id="action_estate_property_offer" model="ir.actions.act_window">
+       <field name="name">Property Offers</field>
+       <field name="res_model">estate.property.offer</field>
+       <field name="view_mode">list,form</field>
+       <field name="domain">[('property_type_id', '=', active_id)]</field>
     </record>
+
 </odoo>
