--- a/views/estate_property_views.xml
+++ b/views/estate_property_views.xml
@@ -4,7 +4,10 @@
         <field name="name">estate.properties.list</field>
         <field name="model">estate.properties</field>
         <field name="arch" type="xml">
-            <list string="Properties">
+            <list string="Properties"
+                  decoration-success="state in ('offer_received', 'offer_accepted')" 
+                  decoration-bf="state == 'offer_accepted'" 
+                  decoration-muted="state == 'sold'">
                 <field name="name" string="Title"/>
                 <field name="postcode"/>
                 <field name="bedrooms"/>
